添加vue 元素容器

--- a/pages/vue.html
+++ b/pages/vue.html
@@ -6,5 +6,8 @@
     <title><%= htmlWebpackPlugin.options.title %> BY SinaSecurityCenter </title>
   </head>
   <body>
+      <div id="main">
+      <h3>{{message}}</h3>
+   </div>
   </body>
 </html>
