--- a/pages/index.html
+++ b/pages/index.html
@@ -6,5 +6,8 @@
     <title><%= htmlWebpackPlugin.options.title %> BY SinaSecurityCenter </title>
   </head>
   <body>
+      <div id="main">
+        <router-view></router-view>
+      </div>
   </body>
 </html>
